welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:6: error: not found: value num
       rep = num(i)
             ^